# crawlio

./: .gitignore  README.md  eslint.config.mts  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
documentation/guides/: aws.md  mypy.md  pytest.md  ruff.md  uv.md
documentation/logic/: Considerations.md  Introduction.md  ModelGeneration.md
scripts/: setup.sh  test.sh
src/code/lambda/classifier/: README.md  pyproject.toml
src/code/lambda/classifier/src/: __init__.py  lambda_function.py
src/code/lambda/classifier/test/: __init__.py  test_sample.py
src/code/models/: package-lock.json  package.json  tsconfig.json
src/code/models/core/: package.json  tsconfig.json
src/code/models/core/lib/: main.tsp
src/code/models/core/src/: index.ts  lib.ts
src/code/models/emitter/: package.json  tsconfig.json
src/code/models/emitter/src/: emitter.ts  lib.ts
src/code/models/src/: tempFile.ts
src/code/models/test/: example.test.ts
src/config/: jest.config.js  package-lock.json  package.json  tsconfig.json
src/config/default/: eslint.config.mjs  init.sh  jest.config.js  placeholder.ts  tsconfig.json
src/config/default/scripts/: setup.sh  test.sh
src/iac/: README.md  package-lock.json  package.json  tsconfig.json
src/iac/lib/: iac-stack.ts
src/models/: package.json
