[project]
name = "crawlio"
version = "0.1.0"
description = "Monorepo for Classifer"

readme = "README.md"
license = "MIT"

authors = ["Anthony Stiles<anthony8stiles+github@gmail.com>"]
maintainers = ["Anthony Stiles<anthony8stiles+github@gmail.com>"]

requires-python = ">=3.14"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["test/*", "*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

# Global options:

[mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["no-self-argument"]

## Example: Ignore missing imports for a specific library (e.g., 'foobar')
#[[tool.mypy.overrides]]
#module = ["foobar.*"]
#ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "off"

[tool.uv.workspace]
members = [
    "src/code/lambda/classifier",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-mypy>=1.0.1",
]
