[project]
name = "classifier"
version = "0.1.0"
description = "File Classifier"
readme = "README.md"
authors = [
    { name = "Anthony Stiles", email = "anthony8stiles+github@gmail.com" }
]
requires-python = ">=3.14.3"
dependencies = []

[project.scripts]
classifier = "classifier:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
